# envision

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  fastbreak.toml  tarpaulin.toml
.claude/: settings.json
.claude/commands/: audit-beta.md  audit.md  release.md
.github/workflows/: ci.yml
benches/: async_runtime.rs  capture_backend.rs  component_events.rs  component_view.rs  memory.rs  runtime.rs  sort_bench.rs
docs/: CHOOSING.md  claudio-migration-plan.md
docs/customer-feedback/: 2026-05-01-leadline-gaps.md
docs/superpowers/plans/: 2026-04-09-app-shell-layout-helper.md  2026-04-09-conversation-view-markdown-role-color-fix.md  2026-04-09-step-indicator-borderless-mode.md  2026-04-11-envision-owned-input-types.md  2026-04-11-render-context-refactor.md  2026-05-02-app-init-args.md  2026-05-02-chrome-ownership.md  2026-05-02-phase-1-handoff.md  2026-05-02-table-sort-cell-unification.md  2026-05-03-theme-palette-severity.md  2026-05-08-cellstyle-severity.md  2026-05-09-styled-text-dx.md  2026-05-19-per-component-style-overrides.md  2026-05-20-status-bar-per-side-separators.md  2026-05-20-styled-inline-compose.md  2026-05-24-docs-suite-d3-d7-d8.md
docs/superpowers/specs/: 2026-04-09-app-shell-layout-helper-design.md  2026-04-09-conversation-view-markdown-role-color-fix-design.md  2026-04-09-step-indicator-border-toggle-design.md  2026-04-11-envision-owned-input-types-design.md  2026-04-11-render-context-design.md  2026-05-02-app-init-args-design.md  2026-05-02-chrome-ownership-design.md  2026-05-02-table-sort-cell-unification-design.md  2026-05-03-theme-palette-severity-design.md  2026-05-08-cellstyle-severity-design.md  2026-05-09-styled-text-dx-design.md  2026-05-19-per-component-style-overrides-design.md  2026-05-20-status-bar-per-side-separators-design.md  2026-05-20-styled-inline-compose-design.md  2026-05-24-docs-suite-d3-d7-d8-design.md
examples/: README.md  accordion.rs  alert_panel.rs  annotations.rs  async_counter.rs  beautiful_dashboard.rs  big_text.rs  box_plot.rs  breadcrumb.rs  button.rs  calendar.rs  canvas.rs  capture_backend.rs  chart.rs  chart_enhanced.rs  chat_app.rs  chat_client.rs  chat_markdown_demo.rs  chat_view.rs  checkbox.rs  code_block.rs  collapsible.rs  command_palette.rs  component_showcase.rs  confirm_dialog.rs  conversation_view.rs  counter_app.rs  dashboard_builder.rs  dashboard_demo.rs  data_grid.rs  dependency_graph.rs  diagram.rs  dialog.rs  diff_viewer.rs  divider.rs  drilldown.rs  dropdown.rs  event_stream.rs  file_browser.rs  file_manager.rs  (+57 more)
specs/: main.fbrk
src/: clipboard.rs  error.rs  lib.rs  render.rs  undo.rs
src/adapter/: dual.rs  mod.rs
src/adapter/dual/: mod.rs  tests.rs
src/annotation/: annotation.rs  mod.rs  registry.rs  types.rs  widget.rs
src/annotation/output/: mod.rs  tests.rs
src/annotation/registry/: mod.rs  tests.rs
src/annotation/types/: mod.rs  tests.rs
src/app/: async_command.rs  async_runtime.rs  command.rs  command_core.rs  mod.rs  model.rs  runtime.rs  runtime_core.rs  subscription.rs  update.rs
src/app/async_command/: mod.rs  tests.rs
src/app/async_runtime/: mod.rs  tests.rs
src/app/command/: mod.rs  tests.rs
src/app/command_core/: mod.rs  tests.rs
src/app/model/: mod.rs  optional_args.rs  tests.rs
src/app/persistence/: mod.rs  tests.rs
src/app/runtime/: builder.rs  builder_configured.rs  config.rs  mod.rs  terminal.rs  tests.rs  virtual_terminal.rs
src/app/runtime_core/: mod.rs  tests.rs
src/app/subscription/: batch.rs  combinators.rs  core.rs  ext.rs  interval.rs  mod.rs  terminal.rs  tests.rs
src/app/update/: mod.rs  tests.rs
src/app/worker/: mod.rs  tests.rs
src/backend/: capture.rs  cell.rs  mod.rs
src/backend/capture/: mod.rs  tests.rs
src/backend/cell/: mod.rs  tests.rs
src/backend/output/: ansi.rs  json.rs  mod.rs  plain.rs
src/component/: accordion.rs  breadcrumb.rs  button.rs  cell.rs  checkbox.rs  context.rs  dialog.rs  dropdown.rs  focus_manager.rs  input_field.rs  key_hints.rs  loading_list.rs  menu.rs  mod.rs  modal.rs  multi_progress.rs  progress_bar.rs  radio_group.rs  router.rs  select.rs  selectable_list.rs  spinner.rs  status_bar.rs  status_log.rs  table.rs  tabs.rs  test_utils.rs  tests.rs  text_area.rs  toast.rs  tooltip.rs  tree.rs
src/component/accordion/: mod.rs  tests.rs
src/component/alert_panel/: metric.rs  mod.rs  render.rs  snapshot_tests.rs  tests.rs
src/component/big_text/: mod.rs  tests.rs
src/component/box_plot/: mod.rs  render.rs  snapshot_tests.rs  state.rs  tests.rs
src/component/breadcrumb/: mod.rs  tests.rs
src/component/button/: mod.rs  tests.rs
src/component/calendar/: mod.rs  tests.rs  view_tests.rs
src/component/canvas/: mod.rs  tests.rs
src/component/chart/: annotation_tests.rs  annotations.rs  area_fill_tests.rs  builders.rs  downsample.rs  enhancement_tests.rs  error_band_tests.rs  error_bands.rs  format.rs  mod.rs  render.rs  scale.rs  (+7 more)
src/harness/: assertions.rs  async_harness.rs  harness.rs  mod.rs  snapshot.rs  test_harness.rs
src/input/: convert.rs  events.rs  key.rs  mod.rs  mouse.rs  queue.rs
src/layout/: mod.rs  tests.rs
src/overlay/: action.rs  mod.rs  stack.rs  traits.rs
src/scroll/: mod.rs  tests.rs
src/snapshots/: envision__render__tests__styled_line_empty_inlines_renders_nothing.snap  envision__render__tests__styled_line_no_chrome_drawn.snap  envision__render__tests__styled_line_renders_inlines.snap  envision__render__tests__styled_line_truncates_to_area_width.snap
src/style/: mod.rs
src/theme/: catppuccin.rs  dracula.rs  gruvbox.rs  mod.rs  nord.rs  palette.rs  solarized.rs  tests.rs
src/util/: mod.rs  tests.rs
tests/: integration.rs  integration_async.rs  integration_new_components.rs  integration_new_components_2.rs  integration_stress.rs  integration_with_args.rs  integration_with_state.rs  property.rs  property_extended.rs  serialization.rs  trybuild_compile_fail.rs
tests/trybuild_app_args/: missing_with_args.rs  missing_with_args.stderr
tools/audit/: Cargo.toml
(+986 files in other folders)
