[package]
name = "envision"
version = "0.5.0"
edition = "2021"
rust-version = "1.81"
description = "A ratatui framework for collaborative TUI development with headless testing support"
license = "MIT"
repository = "https://github.com/ryanoneill/envision"
readme = "README.md"
documentation = "https://docs.rs/envision"
keywords = ["tui", "terminal", "ratatui", "testing", "headless"]
categories = ["command-line-interface", "development-tools::testing"]

[features]
default = ["serialization", "full"]

# Enable all components
full = [
    "input-components",
    "data-components",
    "display-components",
    "navigation-components",
    "overlay-components",
    "compound-components",
    "clipboard",
]

# Component groups
input-components = []
data-components = []
display-components = []
navigation-components = []
overlay-components = []
compound-components = ["input-components", "data-components", "display-components"]

serialization = ["dep:serde", "dep:serde_json", "compact_str/serde", "ratatui/serde"]
tracing = ["dep:tracing"]
clipboard = ["dep:arboard"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
arboard = { version = "3", optional = true }
unicode-width = "0.2"
compact_str = "0.8"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
insta = { version = "1.41", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tempfile = "3.24.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "~1.8"
# Note: fastbreak is used for spec validation via CLI, not as a cargo dependency
# Run `fastbreak check` to validate specs/main.fbrk

[[example]]
name = "themed_app"
required-features = ["input-components", "data-components", "display-components"]

[[example]]
name = "component_showcase"
required-features = ["full"]

[[bench]]
name = "capture_backend"
harness = false

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "component_view"
harness = false
required-features = ["data-components"]

[[bench]]
name = "component_events"
harness = false
required-features = ["input-components", "data-components"]
