[package]
name = "envision"
version = "0.5.0"
edition = "2021"
rust-version = "1.81"
description = "A ratatui framework for collaborative TUI development with headless testing support"
license = "MIT"
repository = "https://github.com/ryanoneill/envision"
readme = "README.md"
documentation = "https://docs.rs/envision"
keywords = ["tui", "terminal", "ratatui", "testing", "headless"]
categories = ["command-line-interface", "development-tools::testing"]
exclude = [".claude/", "CLAUDE.md", "tools/"]

[features]
default = ["serialization", "full"]

# Enable all components
full = [
    "input-components",
    "data-components",
    "display-components",
    "navigation-components",
    "overlay-components",
    "compound-components",
    "clipboard",
]

# Component groups
input-components = []
data-components = []
display-components = []
navigation-components = []
overlay-components = []
compound-components = ["input-components", "data-components", "display-components"]

serialization = ["dep:serde", "dep:serde_json", "compact_str/serde", "ratatui/serde"]
tracing = ["dep:tracing"]
clipboard = ["dep:arboard"]

# Expose AppHarness async test utilities (advance_time, wait_for, etc.)
# for integration tests and downstream crates. Not included in default or full.
test-utils = ["tokio/test-util"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
arboard = { version = "3", optional = true }
unicode-width = "0.2"
compact_str = "0.8"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
insta = { version = "1.41", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tempfile = "3.24.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "~1.8"
tokio-test = "0.4"

[[example]]
name = "themed_app"
required-features = ["input-components", "data-components", "display-components"]

[[example]]
name = "beautiful_dashboard"
required-features = ["full"]

[[example]]
name = "component_showcase"
required-features = ["full"]

[[example]]
name = "scrollable_text"
required-features = ["display-components"]

[[example]]
name = "title_card"
required-features = ["display-components"]

[[example]]
name = "line_input"
required-features = ["input-components"]

[[example]]
name = "chat_app"
required-features = ["compound-components"]

[[example]]
name = "tree"
required-features = ["data-components"]

[[example]]
name = "dropdown"
required-features = ["input-components"]

[[example]]
name = "text_area"
required-features = ["input-components"]

[[example]]
name = "data_grid"
required-features = ["compound-components"]

[[example]]
name = "accordion"
required-features = ["navigation-components"]

[[example]]
name = "breadcrumb"
required-features = ["navigation-components"]

[[example]]
name = "chart"
required-features = ["compound-components"]

[[example]]
name = "checkbox"
required-features = ["input-components"]

[[example]]
name = "confirm_dialog"
required-features = ["overlay-components"]

[[example]]
name = "form"
required-features = ["compound-components"]

[[example]]
name = "key_hints"
required-features = ["display-components"]

[[example]]
name = "loading_list"
required-features = ["data-components"]

[[example]]
name = "log_viewer"
required-features = ["compound-components"]

[[example]]
name = "searchable_list"
required-features = ["compound-components"]

[[example]]
name = "file_browser"
required-features = ["compound-components"]

[[example]]
name = "multi_progress"
required-features = ["display-components"]

[[example]]
name = "pane_layout"
required-features = ["compound-components"]

[[example]]
name = "router"
required-features = ["navigation-components"]

[[example]]
name = "split_panel"
required-features = ["compound-components"]

[[example]]
name = "status_bar"
required-features = ["display-components"]

[[example]]
name = "status_log"
required-features = ["display-components"]

[[example]]
name = "step_indicator"
required-features = ["navigation-components"]

[[example]]
name = "styled_text"
required-features = ["display-components"]

[[example]]
name = "tooltip"
required-features = ["overlay-components"]

[[example]]
name = "production_app"
required-features = ["full"]

[[bench]]
name = "capture_backend"
harness = false

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "component_view"
harness = false
required-features = ["data-components"]

[[bench]]
name = "component_events"
harness = false
required-features = ["input-components", "data-components"]
