[package]
name = "envision"
version = "0.15.1"
edition = "2024"
rust-version = "1.85"
description = "A ratatui framework for collaborative TUI development with headless testing support"
license = "MIT"
repository = "https://github.com/ryanoneill/envision"
readme = "README.md"
documentation = "https://docs.rs/envision"
keywords = ["tui", "terminal", "ratatui", "testing", "headless"]
categories = ["command-line-interface", "development-tools::testing"]
exclude = [".claude/", "CLAUDE.md", "tools/"]

[features]
default = ["serialization", "full"]

# Enable all components
full = [
    "input-components",
    "data-components",
    "display-components",
    "navigation-components",
    "overlay-components",
    "compound-components",
    "clipboard",
    "markdown",
    "regex",
]

# Component groups
input-components = []
data-components = []
display-components = []
navigation-components = []
overlay-components = []
compound-components = ["input-components", "data-components", "display-components"]

serialization = ["dep:serde", "dep:serde_json", "compact_str/serde", "ratatui/serde"]
tracing = ["dep:tracing"]
clipboard = ["dep:arboard"]
markdown = ["dep:pulldown-cmark"]
regex = ["dep:regex"]

# Expose AppHarness async test utilities (advance_time, wait_for, etc.)
# for integration tests and downstream crates. Not included in default or full.
test-utils = ["tokio/test-util"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
arboard = { version = "3", optional = true }
pulldown-cmark = { version = "0.12", optional = true, default-features = false }
regex = { version = "1", optional = true }
unicode-width = "0.2"
compact_str = "0.8"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
insta = { version = "1.41", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1.4"
tempfile = "3.24.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "~1.8"
tokio-test = "0.4"

[[example]]
name = "alert_panel"
required-features = ["compound-components"]

[[example]]
name = "big_text"
required-features = ["display-components"]

[[example]]
name = "box_plot"
required-features = ["compound-components"]

[[example]]
name = "themed_app"
required-features = ["input-components", "data-components", "display-components"]

[[example]]
name = "beautiful_dashboard"
required-features = ["full"]

[[example]]
name = "component_showcase"
required-features = ["full"]

[[example]]
name = "scroll_view"
required-features = ["display-components"]

[[example]]
name = "scrollable_text"
required-features = ["display-components"]

[[example]]
name = "title_card"
required-features = ["display-components"]

[[example]]
name = "line_input"
required-features = ["input-components"]

[[example]]
name = "code_block"
required-features = ["display-components"]

[[example]]
name = "conversation_view"
required-features = ["compound-components"]

[[example]]
name = "tree"
required-features = ["data-components"]

[[example]]
name = "dropdown"
required-features = ["input-components"]

[[example]]
name = "text_area"
required-features = ["input-components"]

[[example]]
name = "data_grid"
required-features = ["compound-components"]

[[example]]
name = "dependency_graph"
required-features = ["compound-components"]

[[example]]
name = "diff_viewer"
required-features = ["compound-components"]

[[example]]
name = "accordion"
required-features = ["navigation-components"]

[[example]]
name = "breadcrumb"
required-features = ["navigation-components"]

[[example]]
name = "calendar"
required-features = ["display-components"]

[[example]]
name = "command_palette"
required-features = ["navigation-components"]

[[example]]
name = "canvas"
required-features = ["display-components"]

[[example]]
name = "diagram"
required-features = ["compound-components"]

[[example]]
name = "chart"
required-features = ["compound-components"]

[[example]]
name = "chart_enhanced"
required-features = ["compound-components"]

[[example]]
name = "checkbox"
required-features = ["input-components"]

[[example]]
name = "collapsible"
required-features = ["display-components"]

[[example]]
name = "switch"
required-features = ["input-components"]

[[example]]
name = "confirm_dialog"
required-features = ["overlay-components"]

[[example]]
name = "event_stream"
required-features = ["compound-components"]

[[example]]
name = "form"
required-features = ["compound-components"]

[[example]]
name = "gauge"
required-features = ["display-components"]

[[example]]
name = "heatmap"
required-features = ["compound-components"]

[[example]]
name = "histogram"
required-features = ["compound-components"]

[[example]]
name = "help_panel"
required-features = ["display-components"]

[[example]]
name = "key_hints"
required-features = ["display-components"]

[[example]]
name = "loading_list"
required-features = ["data-components"]

[[example]]
name = "log_correlation"
required-features = ["compound-components"]

[[example]]
name = "log_explorer"
required-features = ["full"]

[[example]]
name = "log_viewer"
required-features = ["compound-components"]

[[example]]
name = "searchable_list"
required-features = ["compound-components"]

[[example]]
name = "file_browser"
required-features = ["compound-components"]

[[example]]
name = "flame_graph"
required-features = ["compound-components"]

[[example]]
name = "multi_progress"
required-features = ["display-components"]

[[example]]
name = "number_input"
required-features = ["input-components"]

[[example]]
name = "paginator"
required-features = ["display-components"]

[[example]]
name = "pane_layout"
required-features = ["compound-components"]

[[example]]
name = "router"
required-features = ["navigation-components"]

[[example]]
name = "split_panel"
required-features = ["compound-components"]

[[example]]
name = "status_bar"
required-features = ["display-components"]

[[example]]
name = "status_log"
required-features = ["display-components"]

[[example]]
name = "step_indicator"
required-features = ["navigation-components"]

[[example]]
name = "styled_text"
required-features = ["display-components"]

[[example]]
name = "tooltip"
required-features = ["overlay-components"]

[[example]]
name = "production_app"
required-features = ["full"]

[[example]]
name = "divider"
required-features = ["display-components"]

[[example]]
name = "dialog"
required-features = ["overlay-components"]

[[example]]
name = "menu"
required-features = ["navigation-components"]

[[example]]
name = "radio_group"
required-features = ["input-components"]

[[example]]
name = "selectable_list"
required-features = ["data-components"]

[[example]]
name = "slider"
required-features = ["input-components"]

[[example]]
name = "span_tree"
required-features = ["compound-components"]

[[example]]
name = "sparkline"
required-features = ["display-components"]

[[example]]
name = "spinner"
required-features = ["display-components"]

[[example]]
name = "table"
required-features = ["data-components"]

[[example]]
name = "tab_bar"
required-features = ["navigation-components"]

[[example]]
name = "tabs"
required-features = ["navigation-components"]

[[example]]
name = "terminal_output"
required-features = ["display-components"]

[[example]]
name = "timeline"
required-features = ["compound-components"]

[[example]]
name = "treemap"
required-features = ["compound-components"]

[[example]]
name = "toast"
required-features = ["display-components"]

[[example]]
name = "usage_display"
required-features = ["display-components"]

[[example]]
name = "metrics_dashboard"
required-features = ["compound-components"]

[[example]]
name = "progress_bar"
required-features = ["display-components"]

[[example]]
name = "styling_showcase"
required-features = ["full"]

[[example]]
name = "markdown_renderer"
required-features = ["markdown"]

[[example]]
name = "dashboard_builder"
required-features = ["full"]

[[example]]
name = "dashboard_demo"
required-features = ["full"]

[[example]]
name = "button"
required-features = ["input-components"]

[[example]]
name = "input_field"
required-features = ["input-components"]

[[example]]
name = "select"
required-features = ["input-components"]

[[example]]
name = "chat_client"
required-features = ["full"]

[[example]]
name = "file_manager"
required-features = ["full"]

[[bench]]
name = "capture_backend"
harness = false

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "component_view"
harness = false
required-features = ["data-components"]

[[bench]]
name = "component_events"
harness = false
required-features = ["input-components", "data-components"]

[[bench]]
name = "memory"
harness = false
required-features = ["data-components"]
